argocd/manifests/netbootxyz/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbootxyz
  labels:
    app.kubernetes.io/name: netbootxyz
    app.kubernetes.io/managed-by: argocd
