argocd/manifests/netbootxyz/base/service-tftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz-tftp
  namespace: netbootxyz
  annotations:
    metallb.universe.tf/loadBalancerIPs: 172.20.20.202
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: netbootxyz
  ports:
    - name: tftp
      port: 69
      targetPort: 69
      protocol: UDP
