argocd/manifests/netbootxyz/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbootxyz
  namespace: netbootxyz
  labels:
    app: netbootxyz
    app.kubernetes.io/name: netbootxyz
spec:
  type: ClusterIP
  selector:
    app: netbootxyz
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: web-assets
      port: 80
      targetPort: 80
      protocol: TCP
